# docs/swagger.json
@@ -80,9 +80,9 @@
                 }
             }
         },
-        "/recognize": {
+        "/compare": {
             "post": {
-                "description": "Compare uploaded image against database",
+                "description": "Compare two uploaded images and return similarity",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -90,20 +90,27 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Image Recognition"
+                    "Image Comparison"
                 ],
-                "summary": "Recognize image",
+                "summary": "Compare two images",
                 "parameters": [
                     {
                         "type": "file",
-                        "description": "Image to check",
-                        "name": "image",
+                        "description": "First image to compare",
+                        "name": "image1",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Second image to compare",
+                        "name": "image2",
                         "in": "formData",
                         "required": true
                     },
                     {
                         "type": "number",
-                        "description": "Similarity threshold (0-100, default 80)",
+                        "description": "Similarity threshold (0-100, default 85)",
                         "name": "threshold",
                         "in": "formData"
                     }
@@ -112,7 +119,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.RecognizeResponse"
+                            "$ref": "#/definitions/main.CompareResponse"
                         }
                     },
                     "400": {
@@ -138,30 +145,19 @@
         }
     },
     "definitions": {
-        "main.RecognizeResponse": {
+        "main.CompareResponse": {
             "type": "object",
             "properties": {
-                "matched_image": {
-                    "type": "string"
+                "match": {
+                    "type": "boolean"
                 },
                 "processing_time_ms": {
                     "type": "integer"
-                },
-                "result": {
-                    "type": "string"
                 },
                 "similarity": {
                     "type": "number"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "ApiKeyAuth": {
-            "description": "API Gateway",
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
         }
     }
 }
